<resources>
    <string name="app_name">Makkhan Kitchens</string>
    <string name="cna">PRODUCT DETAIL NOT FOUND</string>
    <string name="title_activity_item_detail_view">ItemDetailView</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_internet_unavailable_msg">Internet appears to be offline. Please check your internet connection.</string>
    <string name="msg_networkerror">Network error.\nPlease try again later</string>
    <string name="contactusText">Please fill below contact form. One of our\nexecutive will get back to you soon.</string>
    <string name="internetMsg">Whoops!\nPlease check your\n internet connection</string>
    <string name="orderTime">TIME TO PLACE ORDER</string>
    <string name="orderDate">DATE TO PLACE ORDER</string>
    <string name="validTimeDate">ORDER DATE AND TIME IS NOT VALID !</string>
    <string name="validUser">ADMIN CANNOT LOGIN</string>
    <string name="fontface_robotoblack">Roboto-Black_0.ttf</string>
    <string name="fontface_robotolight_0">Roboto-Light_0.ttf</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">CANCEL</string>
    <string name="title_activity_login">SIGN IN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_forgotPass">FORGOT PASSWORD</string>
    <string name="action_register">Register</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="coupones">Coupons</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."
    </string>
    <string name="userName">Username</string>
    <string name="pwd">Password</string>
    <string name="email">Email</string>
    <string name="mno">Mobile Number</string>
    <string name="cpwd">Confirm Password</string>
    <string name="register">Register</string>
    <string name="altNo">Alt. Mobile Number</string>
    <string name="name">Name</string>
    <string name="pNo">Phone Number</string>
    <string name="err_msg_email">Enter Valid Email</string>
    <string name="title_activity_category_item_detail">CategoryItemDetailActivity</string>
    <string name="title_activity_view_splash">ViewSplash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="display">1</string>
    <string name="apiKey">AIzaSyCa2k2T7yJaVokwBZBtsyZIICiGh13oxOA</string>
    <string name="title_activity_view_delivery_boy">ViewDeliveryBoy</string>
    <string name="title_activity_view_verification_detail">Sign in</string>
    <string name="landmark">LANDMARK</string>
    <string-array name="array_city">
        <item>Select City</item>
    </string-array>
    <string-array name="array_state">
        <item>Select State</item>
    </string-array>
    <string-array name="mode">
        <item>Select Mode</item>
    </string-array>
    <string name="title_activity_view_customize">ViewCustomize</string>
    <string name="selectstateVali">Select State First</string>
    <string name="tax">Tax</string>
    <string name="deliverc">Delivery Charge</string>
    <string name="verifymobNo">VERIFY NUMBER</string>
    <string name="mobNo">Mobile</string>
    <string name="text1">On this screen you need to enter the mobile number and click verify</string>
    <string name="text2">An OTP code will be send to your Mobile Number</string>
    <string name="OTP_text1">On this Screen you need to enter the OTP and click submit.</string>
    <string name="OTP_resend">RE SEND OTP</string>
    <string name="OTP_submit">SUBMIT</string>
    <string name="btnCustomize">CUSTOMIZE</string>
    <string name="quant">Quantity</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="subtotal">Subtotal</string>
    <string name="vat">Discount</string>
    <string name="servicetax">Sub Total</string>
    <string name="delivery_charges">Estimated VAT/CST</string>
    <string name="total">Total Payable</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="delivery">Delivery Charges</string>
    <string name="discount">Discount :</string>
    <string name="pay_amount">Pay Amount :</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="continue_to_payment">CONTINUE TO PAYMENT</string>
    <string name="remove">REMOVE</string>
    <string name="edit">EDIT</string>
    <string name="serverNotWork">Server Not Work</string>
    <string name="customer_detail_name">NAME*</string>
    <string name="mobile_no_1">MOBILE NO 1*</string>
    <string name="mobile_no_2">MOBILE NO 2</string>
    <string name="customer_detail_email">EMAIL*</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="state">STATE*</string>
    <string name="city">CITY*</string>
    <string name="stateBilling">STATE</string>
    <string name="cityBilling">CITY</string>
    <string name="zip_codeBilling">ZIP CODE</string>
    <string name="zip_code">ZIP CODE*</string>
    <string name="zip_code1">ZIP CODE*</string>
    <string name="addressBilling_1">ADDRESS 1</string>
    <string name="addressBilling_2">ADDRESS 2</string>
    <string name="address_1">ADDRESS 1*</string>
    <string name="address_2">ADDRESS 2</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="payment_mode">PAYMENT MODE</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="placeyoutorder">PLACE YOUR ORDER</string>
    <string name="invcustId">INVALID USER/CUSTOMER ID</string>
    <string name="country">COUNTRY</string>
    <string name="noRecordFound">"No records found.\nTry again."</string>
    <string name="noCoupons">"No Coupons found.\nTry again."</string>
    <string name="cartMessage">Cart is empty?</string>
    <string name="moblieNoVerifaction">Mobile Number Verification</string>
    <string name="otpscreen">OTP Screen</string>
    <string name="food_category">Food Category</string>
    <string name="food_item">Food Items</string>
    <string name="customize">Customize</string>
    <string name="check_out">Order Summary</string>
    <string name="cust_detail">Customer Detail</string>
    <string name="signIn">SIGN IN</string>
    <string name="myProfile">My Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="forgmentPass">Forgot Password</string>
    <string name="booktbl">BOOK YOUR TABLE</string>
    <string name="validemail">Enter valid email</string>
    <string name="invalidNo">Enter Valid Mobile No.</string>
    <string name="invalidEmail">Enter Valid Email.</string>
    <string name="requireddetail">Please fill all details.</string>
    <string name="orderhistorydetail">Order Detail</string>
    <string name="otpVali">Enter Valid OTP</string>
    <string name="notification">Notification</string>
    <string-array name="array">
        <item>Less</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="orderForTime">Ordering For</string>
    <string name="content">Sorry,we\'re closing right now.Please select another date?</string>
    <string name="content1">Please select date and time?</string>
    <string name="selectDateTime">Select Date and Time</string>
    <string name="selectDate">Select Date</string>
    <string name="selectDatet">Select Date and Time</string>
    <string name="validateCate">Please select valid date or Press Cancel button</string>
    <string name="validateCoupon">Enter Valid Code or Press Cancel button</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>