<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mtplview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainOtp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.elixir.makkhankitchens.activity.ViewOTPScreen">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/moblineVeriNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="OTP"
                        android:inputType="number"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <com.app.elixir.makkhankitchens.mtplview.MtplTextView
                    android:id="@+id/textViewTimeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/moblineVeriNo"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:padding="@dimen/font_5dp"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:visibility="gone"
                    mtplview:TypeFace="@string/fontface_robotolight_0" />

                <com.app.elixir.makkhankitchens.mtplview.MtplTextView
                    android:id="@+id/timerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewEnterdOtp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:padding="@dimen/font_5dp"
                    android:text="@string/OTP_text1"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    mtplview:TypeFace="@string/fontface_robotolight_0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnLout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentBottom="true"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.app.elixir.makkhankitchens.mtplview.MtplButton
                        android:id="@+id/btnresendOtp"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_5dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonselecatable"
                        android:text="@string/OTP_resend"
                        android:textColor="@android:color/white"
                        mtplview:TypeFace="@string/fontface_robotolight_0" />

                    <com.app.elixir.makkhankitchens.mtplview.MtplButton
                        android:id="@+id/btnSubmit"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_5dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonselecatable"
                        android:text="@string/OTP_submit"
                        android:textColor="@android:color/white"
                        mtplview:TypeFace="@string/fontface_robotolight_0" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>


